# stklos-posix

./: README  stklos-posix.spi
etc/: meta
examples/: Makefile  README  fstat.stk
stklos/: Makefile.in  README  configure  configure.in
stklos/autom4te.cache/: output.0  traces.0
stklos/doc/: Makefile.in  api.skb  eg-web-extension.ske  lib.stk  stklos-posix.skb  version.stk.in
stklos/src/: Makefile.in  stklos-posix.c  stklos-posix.spi  stklos-posix.stk
test/: stklos-posix-test.spi  stklos-posix-test.stk
